Fix chart style so text doesnt overflow

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -73,7 +73,7 @@ body{
   border: 1px solid #E6E6E6;
   border-radius: 5px;
   box-shadow: 0 0 2px 0 rgba(181, 181, 181, 0.3);
-  padding: 20px 40px;
+  padding: 10px 20px;
   margin: 5px;
   text-align: center;
   min-height: 315px;
